--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "hbs": "^4.0.1",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.5.9"
+    "mongoose": "^4.5.9",
+    "pdfkit": "^0.8.3"
   },
   "devDependencies": {
     "expect": "^1.20.2",
