--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "hbs": "^4.0.1",
+    "lodash": "^4.17.10",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9",
     "pdfkit": "^0.8.3"
