--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9",
     "pdfkit": "^0.8.3",
+    "request": "^2.87.0",
     "socket.io": "^2.1.1",
     "validator": "^5.6.0"
   },
